refactor for React 18

--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "samurai-way",
+  "name": "ToDoList",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://EvgeniyCvirko.github.io/IT_incubator_ToDoList",
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@redux-devtools/extension": "^3.2.2",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.0.0",
     "@testing-library/user-event": "13.2.1",
+    "@types/react-dom": "17.0.9",
     "antd": "4.18.7",
     "axios": "0.26.0",
     "classnames": "2.3.1",
@@ -17,8 +19,8 @@
     "jest": "27.5.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-redux": "^8.0.1",
-    "react-router-dom": "5.3.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "5.3.1",
     "react-scripts": "5.0.0",
     "react-test-renderer": "17.0.2",
     "redux": "4.2.0",
@@ -58,7 +60,6 @@
   "devDependencies": {
     "@types/node": "16.7.13",
     "@types/react": "17.0.20",
-    "@types/react-dom": "17.0.9",
     "@types/react-redux": "7.1.22",
     "@types/react-router-dom": "5.3.3",
     "@types/react-test-renderer": "17.0.1",
