--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "react-router-dom": "5.3.1",
     "react-scripts": "5.0.0",
     "react-test-renderer": "17.0.2",
-    "redux": "4.2.0",
+    "redux": "^4.2.0",
     "redux-form": "8.3.8",
-    "redux-thunk": "2.4.1",
+    "redux-thunk": "^2.4.1",
     "reselect": "4.1.5",
     "storybook": "^6.5.9",
     "typescript": "4.4.2",
@@ -83,7 +83,7 @@
     "@storybook/testing-library": "^0.0.13",
     "@types/node": "16.7.13",
     "@types/react": "17.0.20",
-    "@types/react-redux": "7.1.22",
+    "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "5.3.3",
     "@types/react-test-renderer": "17.0.1",
     "@types/redux-form": "8.3.3",
