--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "homepage": "https://EvgeniyCvirko.github.io/IT_incubator_ToDoList",
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/lab": "^5.0.0-alpha.92",
+    "@mui/material": "^5.9.2",
     "@redux-devtools/extension": "^3.2.2",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.0.0",
