--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "antd": "4.18.7",
     "axios": "^0.27.2",
     "classnames": "2.3.1",
-    "formik": "2.2.9",
+    "formik": "^2.2.9",
     "gh-pages": "3.2.3",
     "jest": "27.5.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.2",
-    "react-router-dom": "5.3.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-test-renderer": "17.0.2",
     "redux": "^4.2.0",
