--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/lab": "^5.0.0-alpha.92",
     "@mui/material": "^5.9.2",
     "@redux-devtools/extension": "^3.2.2",
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.0.0",
     "@testing-library/user-event": "13.2.1",
