--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "axios": "^0.27.2",
     "classnames": "2.3.1",
     "formik": "^2.2.9",
-    "gh-pages": "3.2.3",
+    "gh-pages": "^4.0.0",
     "jest": "27.5.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
